--- a/style.css
+++ b/style.css
@@ -5,15 +5,15 @@
 }
 
 .pai{
-    background-color: red;
-    width: 50%;
-    height: 500px;
-    margin: 100px 0px 0px 50px;
+    background-color: rgb(60, 150, 75);
+    width: 100%;
+    height: 150px;
+    margin: 0px 0px 0px 0px;
 }
 
 .filho{
-    background-color: blue;
+    background-color: rgb(128, 28, 66);
     width: 50%;
     height: 50%;
-    margin-left: 50px;
+    margin: 0px 0px 0px 0px;
 }
