--- a/Proj_final_HMTL/style.css
+++ b/Proj_final_HMTL/style.css
@@ -4,6 +4,7 @@
 	--main-decor-color:#13db0ce0;
     --main-header-background:#021b0ae5;
 	--main-font-family: 'Palatino Linotype' ;
+	--main-fonts-text: black;
 }
 *{
 	margin: 0;
@@ -251,3 +252,42 @@ justify-content: center;
         color: var(--main-fonts-color);
         text-align:left;
 }
+
+.text {
+		text-align:center;
+		color: var(--main-fonts-text);
+		z-index: 1;
+		margin-left: 200px;
+		margin-right: 200px;
+		padding: 20px;
+}
+	
+.text  p{
+		margin: 5px;
+		font-size:1.2rem;
+		font-family: var(--main-fonts-text);
+		text-align:center;
+		text-align: justify;
+}
+
+#home2{ 	
+	margin:  auto;
+	height: 100vh;
+	color: var(--main-fonts-color);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+}
+
+#home2 .filter{
+	background: url('https://s0.smartresize.com/wallpaper/596/565/HD-wallpaper-most-ed-vector-flower-background-design-green-nature-nature.jpg') no-repeat;
+	background-size: cover;
+	background-position:center;
+    position: absolute;
+    top: 0px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+	opacity:.20;
+}  
