--- a/Proj_final_HMTL/style.css
+++ b/Proj_final_HMTL/style.css
@@ -168,21 +168,21 @@ a.nav-link{
 	display: flex;
 	flex-direction: column;
 	margin: 20px;
-	width: 200px;
-	height:250px;
+	width: 250px;
+	height:300px;
 	border-radius:12px;
     background:var(--main-decor-color);
 }
 
 .pag img{
 	width: 100%;
-	height:70%;
+	height:80%;
 	border-radius:10px 10px 0px 0px;
 }
 
 .pag .work-content{
 	text-align: center;
-	padding: 10px 5px;
+	padding: 5px 5px;
 	font-size: 1rem;
 	color: var(--main-fonts-color);
 	font-family: var(--main-font-family);
@@ -253,41 +253,75 @@ justify-content: center;
         text-align:left;
 }
 
-.text {
-		text-align:center;
-		color: var(--main-fonts-text);
-		z-index: 1;
-		margin-left: 200px;
-		margin-right: 200px;
-		padding: 20px;
-}
-	
-.text  p{
-		margin: 5px;
-		font-size:1.2rem;
-		font-family: var(--main-fonts-text);
-		text-align:center;
-		text-align: justify;
-}
+/*──────────────────
+      CARQUEJA
+──────────────────*/
 
-#home2{ 	
-	margin:  auto;
+#homeCarqueja{ 	
+	margin:  0px;
 	height: 100vh;
 	color: var(--main-fonts-color);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-evenly;
+	justify-content: end;
+	height: 250px;
 }
 
-#home2 .filter{
-	background: url('https://s0.smartresize.com/wallpaper/596/565/HD-wallpaper-most-ed-vector-flower-background-design-green-nature-nature.jpg') no-repeat;
+#homeCarqueja .filter{
+	background: url('https://renatabarrantes.com.br/wp-content/uploads/2022/11/Carqueja-1600x700_1.jpg') no-repeat;
 	background-size: cover;
 	background-position:center;
     position: absolute;
     top: 0px;
-    bottom: 0;
+	bottom: 0;
     left: 0;
     right: 0;
-	opacity:.20;
-}  
+	opacity:.50;
+	height: 300px;
+}   
+
+/*──────────────────
+      CIDREIRA
+──────────────────*/
+
+#homeCidreira{ 	
+	margin:  0px;
+	height: 100vh;
+	color: var(--main-fonts-color);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: end;
+	height: 250px;
+}
+
+#homeCidreira.filter{
+	background: url('https://renatabarrantes.com.br/wp-content/uploads/2022/11/Carqueja-1600x700_1.jpg') no-repeat;
+	background-size: cover;
+	background-position:center;
+    position: absolute;
+    top: 0px;
+	bottom: 0;
+    left: 0;
+    right: 0;
+	opacity:.50;
+	height: 300px;
+} 
+
+.text {
+	text-align:center;
+	color: var(--main-fonts-color);
+	z-index: 1;
+	margin-left: 200px;
+	margin-right: 200px;
+	padding: 20px;
+}
+
+.text  p{
+	margin: 5px;
+	font-size:1.2rem;
+	font-family: var(--main-fonts-color);
+	text-align:center;
+	text-align: justify;
+}
