--- a/Proj_final_HMTL/style.css
+++ b/Proj_final_HMTL/style.css
@@ -37,6 +37,7 @@ header{
 	transition: 0.3s;
 	z-index: 5;
 }
+
 .nav-show{
 	opacity: 0;
 }
@@ -297,7 +298,7 @@ justify-content: center;
 }
 
 #homeCidreira.filter{
-	background: url('https://renatabarrantes.com.br/wp-content/uploads/2022/11/Carqueja-1600x700_1.jpg') no-repeat;
+	background: url('https://thumbs.dreamstime.com/b/hortel%C3%A3-da-colheita-da-m%C3%A3o-40603052.jpg') no-repeat;
 	background-size: cover;
 	background-position:center;
     position: absolute;
